renew references of Laplacians.jl

--- a/main.bib
+++ b/main.bib
@@ -1,30 +1,58 @@
 
-@article{ZhZh21,
-  year    = {2021},
-  title   = {{Maximizing Influence of Leaders in Social Networks}},
-  author  = {Zhou, Xiaotian and Zhang, Zhongzhi},
-  journal = {Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery \& Data Mining},
-  doi     = {10.1145/3447548.3467229},
-  eprint  = {2106.06128},
-  pages   = {2400--2408}
+@inproceedings{ZhZh21,
+  author    = {Xiaotian Zhou and
+               Zhongzhi Zhang},
+  editor    = {Feida Zhu and
+               Beng Chin Ooi and
+               Chunyan Miao},
+  title     = {Maximizing Influence of Leaders in Social Networks},
+  booktitle = {{KDD} '21: The 27th {ACM} {SIGKDD} Conference on Knowledge Discovery
+               and Data Mining, Virtual Event, Singapore, August 14-18, 2021},
+  pages     = {2400--2408},
+  publisher = {{ACM}},
+  year      = {2021},
+  url       = {https://doi.org/10.1145/3447548.3467229},
+  doi       = {10.1145/3447548.3467229}
 }
-@article{ZhXuZh20,
-  year     = {2020},
-  keywords = {Hitting Time,Kemeny,SDD Solver},
-  title    = {{Nearly Linear Time Algorithm for Mean Hitting Times of Random Walks on a Graph}},
-  author   = {Zhang, Zuobai and Xu, Wanyue and Zhang, Zhongzhi},
-  journal  = {Proceedings of the 13th International Conference on Web Search and Data Mining},
-  doi      = {10.1145/3336191.3371777},
-  pages    = {726--734}
+@inproceedings{ZhXuZh20,
+  author    = {Zuobai Zhang and
+               Wanyue Xu and
+               Zhongzhi Zhang},
+  editor    = {James Caverlee and
+               Xia (Ben) Hu and
+               Mounia Lalmas and
+               Wei Wang},
+  title     = {Nearly Linear Time Algorithm for Mean Hitting Times of Random Walks
+               on a Graph},
+  booktitle = {{WSDM} '20: The Thirteenth {ACM} International Conference on Web Search
+               and Data Mining, Houston, TX, USA, February 3-7, 2020},
+  pages     = {726--734},
+  publisher = {{ACM}},
+  year      = {2020},
+  url       = {https://doi.org/10.1145/3336191.3371777},
+  doi       = {10.1145/3336191.3371777}
 }
-@article{LiPeShYiZh19,
-  year    = {2019},
-  title   = {{Current Flow Group Closeness Centrality for Complex Networks?}},
-  author  = {Li, Huan and Peng, Richard and Shan, Liren and Yi, Yuhao and Zhang, Zhongzhi},
-  journal = {The World Wide Web Conference on - WWW '19},
-  doi     = {10.1145/3308558.3313490},
-  eprint  = {1802.02556},
-  pages   = {961--971}
+@inproceedings{LiPeShYiZh19,
+  author    = {Huan Li and
+               Richard Peng and
+               Liren Shan and
+               Yuhao Yi and
+               Zhongzhi Zhang},
+  editor    = {Ling Liu and
+               Ryen W. White and
+               Amin Mantrach and
+               Fabrizio Silvestri and
+               Julian J. McAuley and
+               Ricardo Baeza{-}Yates and
+               Leila Zia},
+  title     = {Current Flow Group Closeness Centrality for Complex Networks?},
+  booktitle = {The World Wide Web Conference, {WWW} 2019, San Francisco, CA, USA,
+               May 13-17, 2019},
+  pages     = {961--971},
+  publisher = {{ACM}},
+  year      = {2019},
+  url       = {https://doi.org/10.1145/3308558.3313490},
+  doi       = {10.1145/3308558.3313490}
 }
 @book{KeSn76,
   title     = {Finite Markov Chains},
@@ -75,7 +103,7 @@
   year         = {2013},
   organization = {ACM}
 }
-@misc{JuAn14,
+@misc{LeKr14,
   author       = {Jure Leskovec and Andrej Krevl},
   title        = {{SNAP Datasets}: {Stanford} Large Network Dataset Collection},
   howpublished = {\url{http://snap.stanford.edu/data}},
@@ -310,5 +338,23 @@
   eprint     = {1703.04307},
   timestamp  = {Mon, 13 Aug 2018 16:46:09 +0200},
   biburl     = {https://dblp.org/rec/journals/corr/ZhaoLWG17.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{GaKySp23,
+  author     = {Yuan Gao and
+                Rasmus Kyng and
+                Daniel A. Spielman},
+  title      = {Robust and Practical Solution of Laplacian Equations by Approximate
+                Elimination},
+  journal    = {CoRR},
+  volume     = {abs/2303.00709},
+  year       = {2023},
+  url        = {https://doi.org/10.48550/arXiv.2303.00709},
+  doi        = {10.48550/arXiv.2303.00709},
+  eprinttype = {arXiv},
+  eprint     = {2303.00709},
+  timestamp  = {Mon, 06 Mar 2023 16:51:26 +0100},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2303-00709.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
