redraw figures of experiments

--- a/headers.tex
+++ b/headers.tex
@@ -18,6 +18,11 @@
 \usepackage{tabularx}
 \usepackage{stfloats}
 \usepackage{lipsum}
+\usepackage{tikz,tikz-cd}
+\usepackage{pgfplots,capt-of}
+
+\pgfplotsset{compat=1.18}
+\usetikzlibrary{plotmarks}
 
 \newtheorem{problem}{Problem}
 \newtheorem{theorem}{Theorem}[section]
