--- a/main.bib
+++ b/main.bib
@@ -2,9 +2,6 @@
 @inproceedings{ZhZh21,
   author    = {Xiaotian Zhou and
                Zhongzhi Zhang},
-  editor    = {Feida Zhu and
-               Beng Chin Ooi and
-               Chunyan Miao},
   title     = {Maximizing Influence of Leaders in Social Networks},
   booktitle = {{KDD} '21: The 27th {ACM} {SIGKDD} Conference on Knowledge Discovery
                and Data Mining, Virtual Event, Singapore, August 14-18, 2021},
@@ -18,10 +15,6 @@
   author    = {Zuobai Zhang and
                Wanyue Xu and
                Zhongzhi Zhang},
-  editor    = {James Caverlee and
-               Xia (Ben) Hu and
-               Mounia Lalmas and
-               Wei Wang},
   title     = {Nearly Linear Time Algorithm for Mean Hitting Times of Random Walks
                on a Graph},
   booktitle = {{WSDM} '20: The Thirteenth {ACM} International Conference on Web Search
@@ -38,13 +31,6 @@
                Liren Shan and
                Yuhao Yi and
                Zhongzhi Zhang},
-  editor    = {Ling Liu and
-               Ryen W. White and
-               Amin Mantrach and
-               Fabrizio Silvestri and
-               Julian J. McAuley and
-               Ricardo Baeza{-}Yates and
-               Leila Zia},
   title     = {Current Flow Group Closeness Centrality for Complex Networks?},
   booktitle = {The World Wide Web Conference, {WWW} 2019, San Francisco, CA, USA,
                May 13-17, 2019},
@@ -61,17 +47,21 @@
   publisher = {Springer, New York}
 }
 @article{NeWoFi78,
-  title     = {An analysis of approximations for maximizing submodular set functions},
-  author    = {Nemhauser, George L and Wolsey, Laurence A and Fisher, Marshall L},
-  journal   = {Mathematical Programming},
-  volume    = {14},
-  number    = {1},
-  pages     = {265--294},
-  year      = {1978},
-  publisher = {Springer}
+  author  = {George L. Nemhauser and
+             Laurence A. Wolsey and
+             Marshall L. Fisher},
+  title   = {An analysis of approximations for maximizing submodular set functions
+             - {I}},
+  journal = {Math. Program.},
+  volume  = {14},
+  number  = {1},
+  pages   = {265--294},
+  year    = {1978},
+  url     = {https://doi.org/10.1007/BF01588971},
+  doi     = {10.1007/BF01588971}
 }
 @article{JoLi84,
-  title   = {{Extensions of Lipschitz mappings into a Hilbert space}},
+  title   = {Extensions of Lipschitz mappings into a Hilbert space},
   author  = {Johnson, William B and Lindenstrauss, Joram},
   journal = {Contemporary Mathematics},
   volume  = {26},
@@ -79,29 +69,43 @@
   year    = {1984}
 }
 @inproceedings{CoKyMiPaJaPeRaXu14,
-  title        = {Solving {SDD} linear systems in nearly $m \log^{1/2} n$ time},
-  author       = {Cohen, Michael B and Kyng, Rasmus and Miller, Gary L and Pachocki, Jakub W and Peng, Richard and Rao, Anup B and Xu, Shen Chen},
-  booktitle    = {Proceedings of the Forty-Sixth Annual ACM Symposium on Theory of Computing},
-  pages        = {343--352},
-  year         = {2014},
-  organization = {ACM}
+  author    = {Michael B. Cohen and
+               Rasmus Kyng and
+               Gary L. Miller and
+               Jakub W. Pachocki and
+               Richard Peng and
+               Anup B. Rao and
+               Shen Chen Xu},
+  title     = {Solving {SDD} linear systems in nearly \emph{m}log\({}^{\mbox{1/2}}\)\emph{n}
+               time},
+  booktitle = {Symposium on Theory of Computing, {STOC} 2014, New York, NY, USA,
+               May 31 - June 03, 2014},
+  pages     = {343--352},
+  publisher = {{ACM}},
+  year      = {2014},
+  url       = {https://doi.org/10.1145/2591796.2591833},
+  doi       = {10.1145/2591796.2591833}
 }
 @article{SpTe14,
-  author  = {Spielman, Daniel A and Teng, Shang-Hua},
-  title   = {Nearly linear time algorithms for preconditioning and solving symmetric, diagonally dominant linear systems},
-  journal = {SIAM Journal on Matrix Analysis and Applications},
+  author  = {Daniel A. Spielman and
+             Shang{-}Hua Teng},
+  title   = {Nearly Linear Time Algorithms for Preconditioning and Solving Symmetric,
+             Diagonally Dominant Linear Systems},
+  journal = {{SIAM} J. Matrix Anal. Appl.},
   volume  = {35},
   number  = {3},
-  pages   = {835-885},
-  year    = {2014}
+  pages   = {835--885},
+  year    = {2014},
+  url     = {https://doi.org/10.1137/090771430},
+  doi     = {10.1137/090771430}
 }
 @inproceedings{Ku13,
-  title        = {Konect: the koblenz network collection},
-  author       = {Kunegis, J{\'e}r{\^o}me},
-  booktitle    = {Proceedings of the 22nd International World Wide Web Conference},
-  pages        = {1343--1350},
-  year         = {2013},
-  organization = {ACM}
+  title     = {{KONECT} -- {The} {Koblenz} {Network} {Collection}},
+  author    = {J\'{e}r\^{o}me Kunegis},
+  year      = {2013},
+  booktitle = {Proc. Int. Conf. on World Wide Web Companion},
+  pages     = {1343--1350},
+  url       = {http://dl.acm.org/citation.cfm?id=2488173}
 }
 @misc{LeKr14,
   author       = {Jure Leskovec and Andrej Krevl},
@@ -111,86 +115,108 @@
   year         = 2014
 }
 
-@article{YiGuWeTiHa10,
-  year    = {2010},
-  title   = {{A Unified Framework for Link Recommendation Using Random Walks}},
-  author  = {Yin, Zhijun and Gupta, Manish and Weninger, Tim and Han, Jiawei},
-  journal = {2010 International Conference on Advances in Social Networks Analysis and Mining},
-  doi     = {10.1109/asonam.2010.27},
-  pages   = {152--159}
+@inproceedings{YiGuWeTiHa10,
+  author    = {Zhijun Yin and
+               Manish Gupta and
+               Tim Weninger and
+               Jiawei Han},
+  title     = {A Unified Framework for Link Recommendation Using Random Walks},
+  booktitle = {International Conference on Advances in Social Networks Analysis and
+               Mining, {ASONAM} 2010, Odense, Denmark, August 9-11, 2010},
+  pages     = {152--159},
+  publisher = {{IEEE} Computer Society},
+  year      = {2010},
+  url       = {https://doi.org/10.1109/ASONAM.2010.27},
+  doi       = {10.1109/ASONAM.2010.27}
 }
 @article{HuWaYeChLa16,
-  year    = {2016},
-  title   = {{Background Extraction Using Random Walk Image Fusion}},
-  author  = {Hua, Kai-Lung and Wang, Hong-Cyuan and Yeh, Chih-Hsiang and Cheng, Wen-Huang and Lai, Yu-Chi},
-  journal = {IEEE Transactions on Cybernetics},
-  issn    = {2168-2267},
-  doi     = {10.1109/tcyb.2016.2640288},
-  pmid    = {28026799},
-  pages   = {423--435},
+  author  = {Kai{-}Lung Hua and
+             Hong{-}Cyuan Wang and
+             Chih{-}Hsiang Yeh and
+             Wen{-}Huang Cheng and
+             Yu{-}Chi Lai},
+  title   = {Background Extraction Using Random Walk Image Fusion},
+  journal = {{IEEE} Trans. Cybern.},
+  volume  = {48},
   number  = {1},
-  volume  = {48}
+  pages   = {423--435},
+  year    = {2018},
+  url     = {https://doi.org/10.1109/TCYB.2016.2640288},
+  doi     = {10.1109/TCYB.2016.2640288}
 }
-@article{XuZhXiYu14,
-  year    = {2014},
-  title   = {{Detection on application layer DDoS using random walk model}},
-  author  = {Xu, Chuan and Zhao, Guofeng and Xie, Gaogang and Yu, Shui},
-  journal = {2014 IEEE International Conference on Communications (ICC)},
-  issn    = {1550-3607},
-  doi     = {10.1109/icc.2014.6883402},
-  pages   = {707--712}
+
+@inproceedings{XuZhXiYu14,
+  author    = {Chuan Xu and
+               Guofeng Zhao and
+               Gaogang Xie and
+               Shui Yu},
+  title     = {Detection on application layer DDoS using random walk model},
+  booktitle = {{IEEE} International Conference on Communications, {ICC} 2014, Sydney,
+               Australia, June 10-14, 2014},
+  pages     = {707--712},
+  publisher = {{IEEE}},
+  year      = {2014},
+  url       = {https://doi.org/10.1109/ICC.2014.6883402},
+  doi       = {10.1109/ICC.2014.6883402}
 }
-@article{WaJiZhZh10,
-  year    = {2006},
-  title   = {{Image annotation refinement using random walk with restarts}},
-  author  = {Wang, Changhu and Jing, Feng and Zhang, Lei and Zhang, Hong-Jiang},
-  journal = {Proceedings of the 14th annual ACM international conference on Multimedia - MULTIMEDIA '06},
-  doi     = {10.1145/1180639.1180774},
-  pages   = {647--650}
+@inproceedings{WaJiZhZh10,
+  author    = {Changhu Wang and
+               Feng Jing and
+               Lei Zhang and
+               HongJiang Zhang},
+  title     = {Image annotation refinement using random walk with restarts},
+  booktitle = {Proceedings of the 14th {ACM} International Conference on Multimedia,
+               Santa Barbara, CA, USA, October 23-27, 2006},
+  pages     = {647--650},
+  publisher = {{ACM}},
+  year      = {2006},
+  url       = {https://doi.org/10.1145/1180639.1180774},
+  doi       = {10.1145/1180639.1180774}
 }
-@article{LiPeMaQiWeQi10,
-  year    = {2010},
-  title   = {{Improving diversity in Web search results re-ranking using absorbing random walks}},
-  author  = {Lin, Gu-Li and Peng, Hong and Ma, Qian-Li and Wei, Jia and Qin, Jiang-Wei},
-  journal = {2010 International Conference on Machine Learning and Cybernetics},
-  doi     = {10.1109/icmlc.2010.5580733},
-  pages   = {2416--2421},
-  volume  = {5}
+@inproceedings{LiPeMaQiWeQi10,
+  author    = {Gu{-}Li Lin and
+               Hong Peng and
+               Qian{-}Li Ma and
+               Jia Wei and
+               Jiang{-}Wei Qin},
+  title     = {Improving diversity in Web search results re-ranking using absorbing
+               random walks},
+  booktitle = {International Conference on Machine Learning and Cybernetics, {ICMLC}
+               2010, Qingdao, China, July 11-14, 2010, Proceedings},
+  pages     = {2116--2421},
+  publisher = {{IEEE}},
+  year      = {2010},
+  url       = {https://doi.org/10.1109/ICMLC.2010.5580733},
+  doi       = {10.1109/ICMLC.2010.5580733}
 }
 @article{GoViHuRa10,
-  year    = {2010},
-  title   = {{Random Walks on Graphs for Salient Object Detection in Images}},
-  author  = {Gopalakrishnan, Viswanath and Hu, Yiqun and Rajan, Deepu},
-  journal = {IEEE Transactions on Image Processing},
-  issn    = {1057-7149},
-  doi     = {10.1109/tip.2010.2053940},
-  pmid    = {21078566},
-  pages   = {3232--3242},
+  author  = {Viswanath Gopalakrishnan and
+             Yiqun Hu and
+             Deepu Rajan},
+  title   = {Random Walks on Graphs for Salient Object Detection in Images},
+  journal = {{IEEE} Trans. Image Process.},
+  volume  = {19},
   number  = {12},
-  volume  = {19}
+  pages   = {3232--3242},
+  year    = {2010},
+  url     = {https://doi.org/10.1109/TIP.2010.2053940},
+  doi     = {10.1109/TIP.2010.2053940}
 }
 @article{ZeCaZhGuXi10,
-  year    = {2010},
-  title   = {{Random-walk based approach to detect clone attacks in wireless sensor networks}},
-  author  = {Zeng, Yingpei and Cao, Jiannong and Zhang, Shigeng and Guo, Shanqing and Xie, Li},
-  journal = {IEEE Journal on Selected Areas in Communications},
-  issn    = {0733-8716},
-  doi     = {10.1109/jsac.2010.100606},
-  pages   = {677--691},
+  author  = {Yingpei Zeng and
+             Jiannong Cao and
+             Shigeng Zhang and
+             Shanqing Guo and
+             Li Xie},
+  title   = {Random-walk based approach to detect clone attacks in wireless sensor
+             networks},
+  journal = {{IEEE} J. Sel. Areas Commun.},
+  volume  = {28},
   number  = {5},
-  volume  = {28}
-}
-@article{RaGyZh13,
-  year    = {2013},
-  month   = {9},
-  title   = {{Geometry of complex networks and topological centrality}},
-  author  = {Ranjan, Gyan and Zhang, Zhi-Li},
-  journal = {Physica A: Statistical Mechanics and its Applications},
-  issn    = {0378-4371},
-  doi     = {10.1016/j.physa.2013.04.013},
-  pages   = {3833--3845},
-  number  = {17},
-  volume  = {392}
+  pages   = {677--691},
+  year    = {2010},
+  url     = {https://doi.org/10.1109/JSAC.2010.100606},
+  doi     = {10.1109/JSAC.2010.100606}
 }
 
 @article{BoRaZh11,
@@ -228,14 +254,18 @@
 }
 
 
-@article{MaMaGi15,
-  year     = {2015},
-  keywords = {Absorbing Random Walk},
-  title    = {{Absorbing Random-Walk Centrality: Theory and Algorithms}},
-  author   = {Mavroforakis, Charalampos and Mathioudakis, Michael and Gionis, Aristides},
-  journal  = {2015 IEEE International Conference on Data Mining},
-  doi      = {10.1109/icdm.2015.103},
-  pages    = {901--906}
+@inproceedings{MaMaGi15,
+  author    = {Charalampos Mavroforakis and
+               Michael Mathioudakis and
+               Aristides Gionis},
+  title     = {Absorbing Random-Walk Centrality: Theory and Algorithms},
+  booktitle = {2015 {IEEE} International Conference on Data Mining, {ICDM} 2015,
+               Atlantic City, NJ, USA, November 14-17, 2015},
+  pages     = {901--906},
+  publisher = {{IEEE} Computer Society},
+  year      = {2015},
+  url       = {https://doi.org/10.1109/ICDM.2015.103},
+  doi       = {10.1109/ICDM.2015.103}
 }
 @article{RaZh13,
   year     = {2013},
@@ -249,79 +279,108 @@
   volume   = {392},
   keywords = {}
 }
-@article{RoGl16,
-  year     = {2016},
-  title    = {{Optimal Tagging with Markov Chain Optimization}},
-  author   = {Rosenfeld, Nir and Globerson, Amir},
-  journal  = {arXiv},
-  doi      = {10.48550/arxiv.1605.04719},
-  eprint   = {1605.04719},
-  keywords = {}
+@inproceedings{RoGl16,
+  author    = {Nir Rosenfeld and
+               Amir Globerson},
+  title     = {Optimal Tagging with Markov Chain Optimization},
+  booktitle = {Advances in Neural Information Processing Systems 29: Annual Conference
+               on Neural Information Processing Systems 2016, December 5-10, 2016,
+               Barcelona, Spain},
+  pages     = {1307--1315},
+  year      = {2016},
+  url       = {https://proceedings.neurips.cc/paper/2016/hash/c8ed21db4f678f3b13b9d5ee16489088-Abstract.html}
 }
 @inproceedings{GaLePaGoLiZh15,
-  year      = {2015},
-  title     = {{Pivotality of Nodes in Reachability Problems Using Avoidance and Transit Hitting Time Metrics}},
-  author    = {Gangemi, Aldo and Leonardi, Stefano and Panconesi, Alessandro and Golnari, Golshan and Li, Yanhua and Zhang, Zhi-Li},
-  journal   = {Proceedings of the 24th International Conference on World Wide Web},
-  doi       = {10.1145/2740908.2744713},
+  author    = {Golshan Golnari and
+               Yanhua Li and
+               Zhi{-}Li Zhang},
+  title     = {Pivotality of Nodes in Reachability Problems Using Avoidance and Transit
+               Hitting Time Metrics},
+  booktitle = {Proceedings of the 24th International Conference on World Wide Web
+               Companion, {WWW} 2015, Florence, Italy, May 18-22, 2015 - Companion
+               Volume},
   pages     = {1073--1078},
-  booktitle = {Proceedings of the 24th International Conference on World Wide Web Companion, {WWW} 2015, Florence, Italy, May 18-22, 2015 - Companion Volume},
-  keywords  = {}
+  publisher = {{ACM}},
+  year      = {2015},
+  url       = {https://doi.org/10.1145/2740908.2744713},
+  doi       = {10.1145/2740908.2744713}
 }
-@article{LiYuHuCh14,
-  year     = {2014},
-  title    = {{Random-walk Domination in Large Graphs}},
-  author   = {Li, Rong-Hua and Yu, Jeffrey Xu and Huang, Xin and Cheng, Hong},
-  journal  = {2014 IEEE 30th International Conference on Data Engineering},
-  doi      = {10.1109/icde.2014.6816696},
-  pages    = {736--747},
-  keywords = {}
+@inproceedings{LiYuHuCh14,
+  author    = {Rong{-}Hua Li and
+               Jeffrey Xu Yu and
+               Xin Huang and
+               Hong Cheng},
+  title     = {Random-walk domination in large graphs},
+  booktitle = {{IEEE} 30th International Conference on Data Engineering, Chicago,
+               {ICDE} 2014, IL, USA, March 31 - April 4, 2014},
+  pages     = {736--747},
+  publisher = {{IEEE} Computer Society},
+  year      = {2014},
+  url       = {https://doi.org/10.1109/ICDE.2014.6816696},
+  doi       = {10.1109/ICDE.2014.6816696}
 }
 @article{MoBaZhPe20,
-  year     = {2020},
-  keywords = {Dynamic Programming},
-  title    = {{Towards an efficient weighted random walk domination}},
-  author   = {Mo, Songsong and Bao, Zhifeng and Zhang, Ping and Peng, Zhiyong},
-  journal  = {Proceedings of the VLDB Endowment},
-  issn     = {2150-8097},
-  doi      = {10.14778/3436905.3436915},
-  pages    = {560--572},
-  number   = {4},
-  volume   = {14}
+  author  = {Songsong Mo and
+             Zhifeng Bao and
+             Ping Zhang and
+             Zhiyong Peng},
+  title   = {Towards an Efficient Weighted Random Walk Domination},
+  journal = {Proc. {VLDB} Endow.},
+  volume  = {14},
+  number  = {4},
+  pages   = {560--572},
+  year    = {2020},
+  url     = {http://www.vldb.org/pvldb/vol14/p560-mo.pdf},
+  doi     = {10.14778/3436905.3436915}
 }
 
 
-@article{FaWaBoCaMa22,
-  year     = {2022},
-  title    = {{Rewiring What-to-Watch-Next Recommendations to Reduce Radicalization Pathways}},
-  author   = {Fabbri, Francesco and Wang, Yanhao and Bonchi, Francesco and Castillo, Carlos and Mathioudakis, Michael},
-  journal  = {Proceedings of the ACM Web Conference 2022},
-  doi      = {10.1145/3485447.3512143},
-  pages    = {2719--2728},
-  keywords = {}
+@inproceedings{FaWaBoCaMa22,
+  author    = {Francesco Fabbri and
+               Yanhao Wang and
+               Francesco Bonchi and
+               Carlos Castillo and
+               Michael Mathioudakis},
+  title     = {Rewiring What-to-Watch-Next Recommendations to Reduce Radicalization
+               Pathways},
+  booktitle = {{WWW} '22: The {ACM} Web Conference 2022, Virtual Event, Lyon, France,
+               April 25 - 29, 2022},
+  pages     = {2719--2728},
+  publisher = {{ACM}},
+  year      = {2022},
+  url       = {https://doi.org/10.1145/3485447.3512143},
+  doi       = {10.1145/3485447.3512143}
 }
 
 
-@article{GiBaRa21,
-  year     = {2021},
-  title    = {{A Group-to-Group Version of Random Walk Betweenness Centrality}},
-  author   = {Gillani, Iqra Altaf and Bagchi, Amitabha and Ranu, Sayan},
-  journal  = {8th ACM IKDD CODS and 26th COMAD},
-  doi      = {10.1145/3430984.3431020},
-  pages    = {127--135},
-  keywords = {}
+@inproceedings{GiBaRa21,
+  author    = {Iqra Altaf Gillani and
+               Amitabha Bagchi and
+               Sayan Ranu},
+  title     = {A Group-to-Group Version of Random Walk Betweenness Centrality},
+  booktitle = {{CODS-COMAD} 2021: 8th {ACM} {IKDD} {CODS} and 26th COMAD, Virtual
+               Event, Bangalore, India, January 2-4, 2021},
+  pages     = {127--135},
+  publisher = {{ACM}},
+  year      = {2021},
+  url       = {https://doi.org/10.1145/3430984.3431020},
+  doi       = {10.1145/3430984.3431020}
 }
-@article{WaRaSk19,
-  year     = {2019},
-  title    = {{Random Walk Decay Centrality}},
-  author   = {Wąs, Tomasz and Rahwan, Talal and Skibski, Oskar},
-  journal  = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  issn     = {2159-5399},
-  doi      = {10.1609/aaai.v33i01.33012197},
-  pages    = {2197--2204},
-  number   = {01},
-  volume   = {33},
-  keywords = {}
+@inproceedings{WaRaSk19,
+  author    = {Tomasz Was and
+               Talal Rahwan and
+               Oskar Skibski},
+  title     = {Random Walk Decay Centrality},
+  booktitle = {The Thirty-Third {AAAI} Conference on Artificial Intelligence, {AAAI}
+               2019, The Thirty-First Innovative Applications of Artificial Intelligence
+               Conference, {IAAI} 2019, The Ninth {AAAI} Symposium on Educational
+               Advances in Artificial Intelligence, {EAAI} 2019, Honolulu, Hawaii,
+               USA, January 27 - February 1, 2019},
+  pages     = {2197--2204},
+  publisher = {{AAAI} Press},
+  year      = {2019},
+  url       = {https://doi.org/10.1609/aaai.v33i01.33012197},
+  doi       = {10.1609/aaai.v33i01.33012197}
 }
 
 @article{ZhLuWaGu17,
